# find-or-add-cmake-libs-poc

./: CMakeLists.txt  README.md  build-install-libfoo.sh  build-run-repo-with-installed-libs.sh  build-run-repo-with-libs-as-subdir.sh
app/: CMakeLists.txt  main.cpp
libfoo/: CMakeLists.txt  libfoo.cpp  libfoo.h
